# clipboard-normalizer

./: README.md  pyproject.toml
clipboard_normalizer/: main.py
